<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/password_change_title"
            android:textSize="25sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_minor"
            android:orientation="vertical">

            <EditText
                android:id="@+id/id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_marginTop="@dimen/spacing_minor"
                android:background="@color/beyaz"
                android:ems="10"
                android:hint="@string/edit_id"
                android:inputType="textPersonName" />

            <ImageView
                android:layout_marginTop="@dimen/half_padding"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                app:srcCompat="@color/gri" />

            <EditText
                android:layout_marginTop="@dimen/half_padding"
                android:id="@+id/EskiParola"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="@color/beyaz"
                android:ems="10"
                android:hint="@string/edit_old_password"
                android:inputType="textPassword" />

            <ImageView
                android:layout_marginTop="@dimen/half_padding"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                app:srcCompat="@color/gri" />

            <EditText
                android:layout_marginTop="@dimen/half_padding"
                android:id="@+id/yeniParola_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="@color/beyaz"
                android:ems="10"
                android:hint="@string/edit_new_password"
                android:inputType="textPassword" />
        </LinearLayout>




    </LinearLayout>

</android.support.constraint.ConstraintLayout>